// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion [common] example testing should match snapshot(s) for DisabledItem 1`] = `
<div
  class="lucid-Accordion"
>
  <div
    class="lucid-Panel lucid-ExpanderPanel lucid-ExpanderPanel-is-collapsed lucid-Accordion-Item lucid-Panel-is-not-gutterless lucid-Panel-has-margin lucid-Panel-is-scrollable"
  >
    <header
      class="lucid-Panel-Header lucid-ExpanderPanel-header"
    >
      <button
        class="lucid-Button lucid-Button-invisible lucid-Button-has-only-icon lucid-ExpanderPanel-icon"
        type="button"
      >
        <span
          class="lucid-Button-content"
        >
          <svg
            class="lucid-Icon lucid-Icon-color-primary lucid-ChevronIcon lucid-ChevronIcon-is-down"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M.5 4.5l7.5 7 7.5-7"
            />
          </svg>
        </span>
      </button>
      <span>
        Peter Venkman
      </span>
    </header>
    <section
      class="lucid-Panel-content"
    >
      <div
        class="lucid-Collapsible lucid-ExpanderPanel-content"
        style="overflow:hidden;padding:0"
      >
        <div
          class="lucid-Collapsible-content"
          style="margin:0"
        />
      </div>
    </section>
  </div>
  <div
    class="lucid-Panel lucid-ExpanderPanel lucid-ExpanderPanel-is-collapsed lucid-ExpanderPanel-is-disabled lucid-Accordion-Item lucid-Panel-is-not-gutterless lucid-Panel-has-margin lucid-Panel-is-scrollable"
  >
    <header
      class="lucid-Panel-Header lucid-ExpanderPanel-header"
    >
      <button
        class="lucid-Button lucid-Button-invisible lucid-Button-has-only-icon lucid-ExpanderPanel-icon"
        type="button"
      >
        <span
          class="lucid-Button-content"
        >
          <svg
            class="lucid-Icon lucid-Icon-color-primary lucid-ChevronIcon lucid-ChevronIcon-is-down"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M.5 4.5l7.5 7 7.5-7"
            />
          </svg>
        </span>
      </button>
      <span>
        Ray Stantz
      </span>
    </header>
    <section
      class="lucid-Panel-content"
    >
      <div
        class="lucid-Collapsible lucid-ExpanderPanel-content"
        style="overflow:hidden;padding:0"
      >
        <div
          class="lucid-Collapsible-content"
          style="margin:0"
        />
      </div>
    </section>
  </div>
  <div
    class="lucid-Panel lucid-ExpanderPanel lucid-ExpanderPanel-is-collapsed lucid-Accordion-Item lucid-Panel-is-not-gutterless lucid-Panel-has-margin lucid-Panel-is-scrollable"
  >
    <header
      class="lucid-Panel-Header lucid-ExpanderPanel-header"
    >
      <button
        class="lucid-Button lucid-Button-invisible lucid-Button-has-only-icon lucid-ExpanderPanel-icon"
        type="button"
      >
        <span
          class="lucid-Button-content"
        >
          <svg
            class="lucid-Icon lucid-Icon-color-primary lucid-ChevronIcon lucid-ChevronIcon-is-down"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M.5 4.5l7.5 7 7.5-7"
            />
          </svg>
        </span>
      </button>
      <span>
        Egon Spengler
      </span>
    </header>
    <section
      class="lucid-Panel-content"
    >
      <div
        class="lucid-Collapsible lucid-ExpanderPanel-content"
        style="overflow:hidden;padding:0"
      >
        <div
          class="lucid-Collapsible-content"
          style="margin:0"
        />
      </div>
    </section>
  </div>
</div>
`;

exports[`Accordion [common] example testing should match snapshot(s) for FixedIndex 1`] = `
<div
  class="lucid-Accordion"
>
  <div
    class="lucid-Panel lucid-ExpanderPanel lucid-ExpanderPanel-is-collapsed lucid-Accordion-Item lucid-Panel-is-not-gutterless lucid-Panel-has-margin lucid-Panel-is-scrollable"
  >
    <header
      class="lucid-Panel-Header lucid-ExpanderPanel-header"
    >
      <button
        class="lucid-Button lucid-Button-invisible lucid-Button-has-only-icon lucid-ExpanderPanel-icon"
        type="button"
      >
        <span
          class="lucid-Button-content"
        >
          <svg
            class="lucid-Icon lucid-Icon-color-primary lucid-ChevronIcon lucid-ChevronIcon-is-down"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M.5 4.5l7.5 7 7.5-7"
            />
          </svg>
        </span>
      </button>
      <span>
        Peter Venkman
      </span>
    </header>
    <section
      class="lucid-Panel-content"
    >
      <div
        class="lucid-Collapsible lucid-ExpanderPanel-content"
        style="overflow:hidden;padding:0"
      >
        <div
          class="lucid-Collapsible-content"
          style="margin:0"
        />
      </div>
    </section>
  </div>
  <div
    class="lucid-Panel lucid-ExpanderPanel lucid-Accordion-Item lucid-Panel-is-not-gutterless lucid-Panel-has-margin lucid-Panel-is-scrollable"
  >
    <header
      class="lucid-Panel-Header lucid-ExpanderPanel-header"
    >
      <button
        class="lucid-Button lucid-Button-invisible lucid-Button-has-only-icon lucid-ExpanderPanel-icon"
        type="button"
      >
        <span
          class="lucid-Button-content"
        >
          <svg
            class="lucid-Icon lucid-Icon-color-primary lucid-ChevronIcon lucid-ChevronIcon-is-up"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M.5 4.5l7.5 7 7.5-7"
            />
          </svg>
        </span>
      </button>
      <span>
        Ray Stantz
      </span>
    </header>
    <section
      class="lucid-Panel-content"
    >
      <div
        class="lucid-Collapsible lucid-ExpanderPanel-content lucid-ExpanderPanel-content-is-expanded"
        style="overflow:hidden;padding:0"
      >
        <div
          class="lucid-Collapsible-content"
          style="margin:0"
        >
          <div
            class="lucid-ExpanderPanel-content-inner"
          >
            Raymond Ray Stantz, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters, Ghostbusters II, Casper, and the animated television series The Real Ghostbusters. He was portrayed by Dan Aykroyd in both live action films, and voiced by Frank Welker in the animated series. He is a member of the Ghostbusters and one of the three doctors of parapsychology, along with Dr. Peter Venkman and Dr. Egon Spengler.
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    class="lucid-Panel lucid-ExpanderPanel lucid-ExpanderPanel-is-collapsed lucid-Accordion-Item lucid-Panel-is-not-gutterless lucid-Panel-has-margin lucid-Panel-is-scrollable"
  >
    <header
      class="lucid-Panel-Header lucid-ExpanderPanel-header"
    >
      <button
        class="lucid-Button lucid-Button-invisible lucid-Button-has-only-icon lucid-ExpanderPanel-icon"
        type="button"
      >
        <span
          class="lucid-Button-content"
        >
          <svg
            class="lucid-Icon lucid-Icon-color-primary lucid-ChevronIcon lucid-ChevronIcon-is-down"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M.5 4.5l7.5 7 7.5-7"
            />
          </svg>
        </span>
      </button>
      <span>
        Egon Spengler
      </span>
    </header>
    <section
      class="lucid-Panel-content"
    >
      <div
        class="lucid-Collapsible lucid-ExpanderPanel-content"
        style="overflow:hidden;padding:0"
      >
        <div
          class="lucid-Collapsible-content"
          style="margin:0"
        />
      </div>
    </section>
  </div>
</div>
`;

exports[`Accordion [common] example testing should match snapshot(s) for UsingHeaderAsChild 1`] = `
<div
  class="lucid-Accordion"
>
  <div
    class="lucid-Panel lucid-ExpanderPanel lucid-ExpanderPanel-is-collapsed lucid-Accordion-Item lucid-Panel-is-not-gutterless lucid-Panel-has-margin lucid-Panel-is-scrollable"
  >
    <header
      class="lucid-Panel-Header lucid-ExpanderPanel-header"
    >
      <button
        class="lucid-Button lucid-Button-invisible lucid-Button-has-only-icon lucid-ExpanderPanel-icon"
        type="button"
      >
        <span
          class="lucid-Button-content"
        >
          <svg
            class="lucid-Icon lucid-Icon-color-primary lucid-ChevronIcon lucid-ChevronIcon-is-down"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M.5 4.5l7.5 7 7.5-7"
            />
          </svg>
        </span>
      </button>
      <span>
        Peter Venkman
      </span>
    </header>
    <section
      class="lucid-Panel-content"
    >
      <div
        class="lucid-Collapsible lucid-ExpanderPanel-content"
        style="overflow:hidden;padding:0"
      >
        <div
          class="lucid-Collapsible-content"
          style="margin:0"
        />
      </div>
    </section>
  </div>
  <div
    class="lucid-Panel lucid-ExpanderPanel lucid-ExpanderPanel-is-collapsed lucid-ExpanderPanel-is-disabled lucid-Accordion-Item lucid-Panel-is-not-gutterless lucid-Panel-has-margin lucid-Panel-is-scrollable"
  >
    <header
      class="lucid-Panel-Header lucid-ExpanderPanel-header"
    >
      <button
        class="lucid-Button lucid-Button-invisible lucid-Button-has-only-icon lucid-ExpanderPanel-icon"
        type="button"
      >
        <span
          class="lucid-Button-content"
        >
          <svg
            class="lucid-Icon lucid-Icon-color-primary lucid-ChevronIcon lucid-ChevronIcon-is-down"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M.5 4.5l7.5 7 7.5-7"
            />
          </svg>
        </span>
      </button>
      <span>
        Ray Stantz
      </span>
    </header>
    <section
      class="lucid-Panel-content"
    >
      <div
        class="lucid-Collapsible lucid-ExpanderPanel-content"
        style="overflow:hidden;padding:0"
      >
        <div
          class="lucid-Collapsible-content"
          style="margin:0"
        />
      </div>
    </section>
  </div>
  <div
    class="lucid-Panel lucid-ExpanderPanel lucid-ExpanderPanel-is-collapsed lucid-Accordion-Item lucid-Panel-is-not-gutterless lucid-Panel-has-margin lucid-Panel-is-scrollable"
  >
    <header
      class="lucid-Panel-Header lucid-ExpanderPanel-header"
    >
      <button
        class="lucid-Button lucid-Button-invisible lucid-Button-has-only-icon lucid-ExpanderPanel-icon"
        type="button"
      >
        <span
          class="lucid-Button-content"
        >
          <svg
            class="lucid-Icon lucid-Icon-color-primary lucid-ChevronIcon lucid-ChevronIcon-is-down"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M.5 4.5l7.5 7 7.5-7"
            />
          </svg>
        </span>
      </button>
      <span>
        Egon Spengler
      </span>
    </header>
    <section
      class="lucid-Panel-content"
    >
      <div
        class="lucid-Collapsible lucid-ExpanderPanel-content"
        style="overflow:hidden;padding:0"
      >
        <div
          class="lucid-Collapsible-content"
          style="margin:0"
        />
      </div>
    </section>
  </div>
</div>
`;
